some sync and dsc restoration improvements